# ai-video-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ai_video_editor/: __main__.py
ai_video_editor/agents/: __init__.py  video_editor_agent.py
ai_video_editor/config/: settings.py
ai_video_editor/core/: __init__.py  google_client.py  ollama_client.py  types.py
ai_video_editor/tools/: __init__.py  caption_ops.py  ffmpeg_exec.py  file_ops.py  video_ops.py
ai_video_editor/utils/: __init__.py  captions.py  ffmpeg_utils.py
